menambahkan projetc baru

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="project-card">
             <div class="project-image">
                 <!-- Replace with actual image -->
-                <img src="asset/G2G Behance.png" alt="E-Commerce Dashboard">
+                <img src="asset/Thumbnail.png" alt="Safera Project">
             </div>
             <div class="project-content">
                 <div class="project-labels">
@@ -215,7 +215,7 @@
                 </div>
                 <h3 class="project-title">G2G (Grounds to Garmet) </h3>
                 <p class="project-description">Redesign dashboard untuk platform e-commerce dengan fokus pada user experience dan data visualization yang lebih baik.</p>
-                <a href="https://g2g-pi.vercel.app/" class="project-button">Lihat Project</a>
+                <a href="asset/Safera.pdf" class="project-button">Lihat Project</a>
             </div>
         </div>
         
