Menambahkan Landing page

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             </div>
             <div class="project-content">
                 <div class="project-labels">
-                    <span class="project-label">Web Development</span>
+                    <span class="project-label">Mobile App</span>
                 </div>
                 <h3 class="project-title">G2G (Grounds to Garmet) </h3>
                 <p class="project-description">Redesign dashboard untuk platform e-commerce dengan fokus pada user experience dan data visualization yang lebih baik.</p>
@@ -223,15 +223,15 @@
         <div class="project-card">
             <div class="project-image">
                 <!-- Replace with actual image -->
-                <img src="asset/Shelux.png" alt="Food Delivery App">
+                <img src="asset/Landingpage.png" alt="Landing Page">
             </div>
             <div class="project-content">
                 <div class="project-labels">
-                    <span class="project-label">Web Design</span>
+                    <span class="project-label">Landing Page</span>
                 </div>
-                <h3 class="project-title">ShoeLux - E-Commerce for Shoes</h3>
+                <h3 class="project-title">Landing Page</h3>
                 <p class="project-description">web design for a catalog of a shoe store or shoe brand</p>
-                <a href="https://www.behance.net/gallery/222021725/ShoeLux-Website-E-Commerce" class="project-button">Lihat Project</a>
+                <a href="https://www.behance.net/gallery/237560315/AI-Content-Generator-Landing-Page" class="project-button">Lihat Project</a>
             </div>
         </div>
         
@@ -240,7 +240,7 @@
     
     <!-- See All Button -->
     <a href="https://www.behance.net/fatkhimaulana" class="see-all-button" target="_blank">
-        See All My Work
+        See My Behance
         <svg class="arrow-icon" viewBox="0 0 16 16">
             <path d="M8.5 2V14M8.5 14L14.5 8M8.5 14L2.5 8" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
