--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
                 <div class="project-labels">
                     <span class="project-label">Mobile App</span>
                 </div>
-                <h3 class="project-title">G2G (Grounds to Garmet) </h3>
-                <p class="project-description">Redesign dashboard untuk platform e-commerce dengan fokus pada user experience dan data visualization yang lebih baik.</p>
+                <h3 class="project-title">Safera </h3>
+                <p class="project-description">Aplikasi untuk bantuan Darurat secara instan, dan pelaporan Kekerasan seksual maupun verbal.</p>
                 <a href="asset/Safera.pdf" class="project-button">Lihat Project</a>
             </div>
         </div>
