mengubah deskripsi card 2 ke inggris

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <span class="project-label">Mobile App</span>
                 </div>
                 <h3 class="project-title">Safera </h3>
-                <p class="project-description">Aplikasi untuk bantuan Darurat secara instan, dan pelaporan Kekerasan seksual maupun verbal.</p>
+                <p class="project-description">An application designed to provide instant emergency assistance and reporting for sexual and verbal violence.</p>
                 <a href="asset/Safera.pdf" class="project-button">Lihat Project</a>
             </div>
         </div>
