--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </p>
                 <div class="about-buttons">
                     <a href="#contact" class="btn-primary">Get in Touch</a>
-                    <a href="asset/CV_Fatkhi Maulana1.pdf" class="btn-secondary" target="_blank">Download CV</a>
+                    <a href="asset/CV_Fatkhi Maulana.pdf" class="btn-secondary" target="_blank">Download CV</a>
                 </div>
             </div>
             
